# scim-wnn

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  kigou-def.rkt  like-msime.rkt  scim-wnn-def.rkt
m4/: ChangeLog  Makefile.in
po/: ChangeLog  POTFILES.in  ja.gmo  ja.po  scim-wnn.pot
src/: Makefile.am  Makefile.in  convertor.cpp  convertor.h  kanainput.cpp  kanainput.h  preeditor.cpp  preeditor.h  romkan.cpp  romkan.h  romkan_table.h  scim_wnn_def.h  scim_wnn_imengine.cpp  scim_wnn_imengine.h  scim_wnn_imengine_setup.cpp  wnnconversion.cpp  wnnconversion.h  wnnproto.h
